<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/list_item_box"
    android:padding="4dp">

    <LinearLayout
        android:id="@+id/name_count_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/resource_cost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/resource_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resource_name"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:layout_width="4dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/resource_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resource_quantity"
            android:textAlignment="viewEnd"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/resource_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resource_cost"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_count_layout" />

    <TextView
        android:id="@+id/item_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_info"
        android:visibility="gone"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/button_layout"
        app:layout_constraintTop_toBottomOf="@id/resource_cost" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resource_cost">

        <Button
            android:id="@+id/button_purchase"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/button_rv_item_available"
            android:text="Purchase" />

        <Space
            android:layout_width="4dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/button_sell"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@drawable/button_rv_item_available"
            android:text="Sell" />

        <TextView
            android:id="@+id/resource_values"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/resource_values"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/button_layout"
            app:layout_constraintEnd_toEndOf="@id/resource_quantity"
            app:layout_constraintTop_toTopOf="@id/button_layout" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>