<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="4dp"
    android:background="@drawable/list_item_box"
    android:padding="4dp">

    <LinearLayout
        android:id="@+id/name_count_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/resource_cost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/resource_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resource_name"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:layout_width="4dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/resource_purchased"
            android:layout_width="20dp"
            android:layout_gravity="center|end"
            android:layout_height="20dp"
            android:textSize="18sp"
            android:visibility="visible"
            tools:srcCompat="@drawable/checkmark_gray"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <TextView
        android:id="@+id/resource_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resource_cost"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/item_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_count_layout" />

    <TextView
        android:id="@+id/item_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_info"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/button_layout"
        app:layout_constraintTop_toBottomOf="@id/resource_cost" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:gravity="end|center"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_info">

        <Button
            android:id="@+id/button_upgrades_purchase"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/button_rv_item_available"
            android:text="Purchase" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>